# seshat-unicode

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: collections.rs  lib.rs  unicode.rs
src/unicode/: hangul.rs  normalization.rs  props.rs  seg.rs  ucd.rs
src/unicode/ucd/: age.rs  bc.rs  binary_props.rs  blk.rs  ccc.rs  ce.rs  derived_props.rs  dm.rs  dt.rs  emoji_props.rs  gc.rs  gcb.rs  hst.rs  insc.rs  jsn.rs  na.rs  normalization_props.rs  property_names.rs  sc.rs  wb.rs
src/unicode/ucd/dm/: dm_map.rs
src/unicode/ucd/na/: na_table.rs
tests/: grapheme_break_test.rs  grapheme_break_test_cases.rs  normalization_test.rs  normalization_test_cases.rs  properties_test.rs  segmentation_test.rs
tests/data/: README
tools/ucd-tool/: README.md  gen-blk-enum.py  gen-blk-name.py  gen-grapheme-break-test.py  gen-json-data.py  gen-normalization-test.py  gen-sc-enum.py  gen-sc-name.py  ucd-tool.py
tools/ucd-tool/data/: README.md
tools/ucd-tool/data/13.0.0/: Blocks.json  CompositionExclusions.json  DerivedAge.json  DerivedNormalizationProps.json  NormalizationTest.json  PropList.json  PropertyValueAliases.json  Scripts.json  UnicodeData.json
tools/ucd-tool/data/14.0.0/: Blocks.json  DerivedAge.json  DerivedNormalizationProps.json  HangulSyllableType.json  NormalizationTest.json  PropList.json  PropertyValueAliases.json  Scripts.json  UnicodeData.json
tools/ucd-tool/data/15.0.0/: Blocks.json  DerivedAge.json  NormalizationTest.json  PropList.json  PropertyAliases.json  PropertyValueAliases.json  Scripts.json  UnicodeData.json
tools/ucd-tool/ucd/: unicode.py
(+64 files in other folders)
