[package]
name = "seshat-unicode"
version = "0.0.13"
authors = ["Yujeonja <hardboiled65@gmail.com>"]
description = "A Unicode Library for Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/hardboiled65/seshat-unicode"
keywords = ["unicode"]
edition = "2018"

[lib]
name = "seshat"

[dependencies]
num = "0.3.0"

[dev-dependencies]
xml-rs = "0.8"
