[package]
name = "seshat-unicode"
version = "0.2.0"
authors = ["Aspen Schneider <hardboiled65@gmail.com>"]
description = "A Unicode Library for Rust. Unicode 15.1.0 ready. XID_Start and XID_Continue are also available."
license = "MIT"
readme = "README.md"
repository = "https://github.com/hardboiled65/seshat-unicode"
keywords = ["unicode"]
edition = "2018"

[lib]
name = "seshat"

[dependencies]
num = "0.3.0"

[dev-dependencies]
xml-rs = "0.8"
