[package]
name = "seshat-unicode"
version = "0.3.0"
authors = ["Aspen Schneider <rendezvous71@gmail.com>"]
description = "A Unicode Library for Rust. Unicode 16.0.0 ready. XID_Start and XID_Continue are also available."
license = "MIT"
readme = "README.md"
repository = "https://github.com/aspschn/seshat-unicode"
keywords = ["unicode"]
edition = "2018"
exclude = ["/tools"]

[lib]
name = "seshat"

[dependencies]
num = "0.3.0"

[dev-dependencies]
xml-rs = "0.8"
